--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ border-bottom: 1px solid #e5e5e5;
 padding-top: 20px;
 padding-bottom: 20px;
 }
-.bodyDiv{
+.bodyDiv {
 text-align: center;
 }
 @media screen and (min-width: 768px) {
@@ -81,5 +81,15 @@ text-align: center;
 width: auto;
 display: inline-block;
 }
+img {
+  float: left !important;
+  width: 200px;
+  height: 200px;
+  padding: 5px;
+  margin: 5px;
+  border: 3px solid #045FB4;
 }
+
+
+
 
