--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <!-- Load c3.css -->
-    <link href="{{ url_for('static', filename='c3.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='c3.css') }}">
     <script>
     function page_loaded() {
     }
